# riglogix-router

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  scheduler.py
config/: __init__.py  settings.yaml
data/: riglogix.db
llm/: client.py
llm/prompts/: classify_product.md  compose_email.md  enrich_news.md  evaluate_timing.md  structure_news.md
pipeline/classification/: product_classifier.py
pipeline/distribution/: email_composer.py
pipeline/enrichment/: enricher.py
pipeline/feedback/: feedback_handler.py
pipeline/ingestion/: daily_logix_scraper.py
pipeline/routing/: opportunity_router.py
pipeline/structuring/: news_parser.py
pipeline/timing/: timing_evaluator.py
produc_manager_deliverables/: RLR_4SS_RigLogix_Router_Project_Definition_EN.md
roles_templates/: product_manager.md  product_owner.md  solution_architect.md  technical_lead.md  ux_designer.md
seller_worksapce_templates/: classification_rules.md  enrichment_rules.md  seller_profile_template.md
seller_worksapce_templates/accounts/: account_template.md
seller_worksapce_templates/products/: product_template.md
seller_workspace/: classification_rules.md  enrichment_rules.md  seller_profile.md
seller_workspace/products/: conductor_analysis.md  dp_feasibility.md  dynops.md  riser_analysis.md  swim.md
storage/: db.py  schema.sql
tests/: conftest.py  test_classification.py  test_db.py  test_distribution.py  test_enrichment.py  test_feedback.py  test_ingestion.py  test_pipeline_e2e.py  test_routing.py  test_structuring.py  test_timing.py
(+1 files in other folders)
